# nodi.vn

./: .env.bak  .env.pre-phase5b  .gitignore  Dockerfile.postgres  docker-compose.yml  docker-compose.yml.bak  docker-compose.yml.pre-phase5b  init.sql  migration_sprint10.sql  migration_sprint3.sql  migration_sprint89.sql  pgbackrest.conf  test_ws.py
.github/workflows/: deploy.yml.disabled
api/: Cargo.toml  Dockerfile
api/src/: config.rs  db.rs  error.rs  main.rs  migration_sprint156.sql  migration_sprint157.sql
api/src/middleware/: auth.rs  mod.rs  rate_limit.rs  tenant.rs
api/src/models/: mod.rs  proto.rs  store.rs  sync_models.rs  sync_v2.rs  user.rs
api/src/proto/: sync.proto
api/src/routes/: account.rs  accounting.rs  admin.rs  auth.rs  backup.rs  dashboard.rs  einvoice.rs  health.rs  license.rs  market.rs  mod.rs  onboarding.rs  payment.rs  scanner.rs  staff_invite.rs  store.rs  support.rs  sync.rs  sync_v2.rs  upload.rs  ws_support.rs  ws_sync.rs
api/src/services/: fcm.rs  merge_engine.rs  mod.rs
docs/: CHANGELOG.md  ROADMAP.md
ha-tang/: vps-report.md
monitoring/: alert_rules.yml  prometheus.yml
nginx/: nginx.conf
nginx/conf.d/: nodi.conf
project/: CHANGELOG.md  DEVELOPMENT_JOURNAL.md  EXECUTIVE_ASSISTANT_ROLE.md  SPEC_DRIVEN_OVERVIEW.md
qa/: 2026-03-20-sprint128.md  purge_store_1.sql
roadmap/: CHANGELOG.md  PROJECT_INFO.md  ROADMAP.md  SPEC_DRIVEN.md
scripts/: backup-cron.sh  backup_db.sh  deploy.sh  pg_backup.sh
web/: .dockerignore  Dockerfile  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
(+205 files in other folders)
